  * Fixed typo (LP: #355923)
  * Make enough space for translated subtitle (LP: #351519)
  * Fixed typo (LP: #355928)
  * Ubpdated translations from rosetta
  * Ensure that the installation directory is not compressed (LP:
    #359716)
  * Need to create the installation dir before uncompressing it (LP:
    #359716)
  * Fixed variable scope in previous patch (LP: #359716)

  [ Hampus Wessman ]
  * Added a new metalink parser
  * Fixed the check for wine so that it looks in additonal places
  * Added tools/wine to the branch
  * Fixed a bug in virtualdisk.py
  * Added deletion of temporary directory
  * Fixed archive signature search in unpack.c
  * Removed some debugging code

  [ Evan Dandrea ]
  * Fixed a typo in the translation template.
  * Require adminstrator privileges (LP: #340400).  Thanks Agostino Russo!
  * os.environ is a dictionary, not a callable method.
  * Only uncompress files in the boot directory (LP: #341640).  Thanks Agostino
    Russo!
  * Call the correct bootloader installation method for each version of
    Windows.
  * Use registry.{get,set}_value not the nonexistent
    registry.{get,set}_key.
  * Fix typo where a bcdedit command was accidentally created using
    concatenation.
  * subprocess.Popen takes a list of string arguments.
  * Bcdedit requires absolute paths.
  * There's no need to quote arguments to commands when using Popen.  It
    passes them straight through, so you'll get "Ubuntu Linux" instead of
    Ubuntu Linux.
  * Removed an erroneous closing parentheses in the use_cd check.
  * Ignore any failure in delete_directory as it is just working with temporary
    directories.
  * Ensure that vista boot menu entry points to the correct wubildr file
    (LP: #358356)

  [ Mario Limonciello ]
  * Update mythbuntu.preseed to use the latest strings available in
    ubiquity-frontend-mythbuntu.
  * Check for preseed.$(distro) in the data directory before assuming that
    preseed.lupin should be used. (LP: #359834)
