@@ -211,6 +211,10 @@ wubi (9.04) UNRELEASED; urgency=low
   * Need to create the installation dir before uncompressing it (LP:
     #359716)
   * Fixed variable scope in previous patch (LP: #359716)
+  * When checking the username use the same regex as in user-setup,
+    thanks Evan Dandrea
+  * Properly sanitize host username to avoid UnicodeDecodeError (LP:
+    #344151)
 
   [ Hampus Wessman ]
   * Added a new metalink parser
@@ -250,4 +254,4 @@ wubi (9.04) UNRELEASED; urgency=low
   * Check for preseed.$(distro) in the data directory before assuming that
     preseed.lupin should be used. (LP: #359834)
 
- -- Agostino Russo <agostino.russo@gmail.com>  Sat, 18 Apr 2009 13:33:49 +0100
+ -- Agostino Russo <agostino.russo@gmail.com>  Sun, 19 Apr 2009 15:08:26 +0100
